<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_ec"
    android:orientation="vertical"
    tools:context=".ConfigureSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="80dp">


            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/alert_background"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/back_image"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/back"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/configure"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/configure_desc"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credentials" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/captureface" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setupComplete" />

        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>