<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_ec"
    tools:context=".HomeViewActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_horizontal"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/rl_profile_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="126dp"
        android:background="@android:color/transparent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_grey">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:layout_marginTop="20dp"
                android:src="@drawable/kiosk_face" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:id="@+id/pack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10dp"
                            android:fontFamily="@font/nunito_bold"
                            android:text="@string/emp_name"
                            android:textSize="20sp"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_regular"
                            android:gravity="center_horizontal"
                            android:paddingLeft="10dp"
                            android:text="@string/emp_number"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/lable_remain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunito_regular"
                            android:gravity="right"
                            android:paddingLeft="10dp"
                            android:text="@string/login_time"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/remainslot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:fontFamily="@font/nunito_regular"
                            android:inputType="numberDecimal"
                            android:text="@string/time"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/confrim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/retake"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_grey"
        android:gravity="center"
        android:text="@string/retake"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/retake"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_profile_details"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_green"
        android:backgroundTint="#159F54"
        android:gravity="center"
        android:text="@string/confrim"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>