<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/alert_background">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/empid"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#406F6F6F">

            <EditText
                android:id="@+id/edt_empno"
                style="@style/EditTextStyleMobile"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="center"
                android:hint="@string/enter_empid"
                android:textColorHint="#4DD2D2D2"
                android:inputType="text"
                android:minWidth="40dp" />

        </LinearLayout>



    </RelativeLayout>

    <Button
        android:id="@+id/next_pin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_green"
        android:backgroundTint="#159F54"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <com.example.ec_camera.MyKeyboard
        android:id="@+id/keyboardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible" />

</LinearLayout>

