<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenCameraActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/transparent"
        android:text="@string/emp_connect"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/scan_to_login"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_grey"
        android:gravity="center"
        android:text="@string/configure"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="48dp" />

    <RelativeLayout
        android:id="@+id/rl_profile_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:background="@drawable/kiosk_face"
            android:clickable="false">

        </FrameLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/login_pin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/btn_border_padding"
        android:layout_marginTop="@dimen/btn_border_padding"
        android:layout_marginEnd="@dimen/btn_border_padding"
        android:layout_marginBottom="@dimen/btn_border_padding"
        android:background="@drawable/button_grey"
        android:gravity="center"
        android:text="Login via pin code"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>